// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupsListItem > it should match snapshot with one member and admin role 1`] = `
"<div class=\\"group-item\\">
  <div class=\\"group-item-info\\">
    <div class=\\"group-item-title-wrapper group-item-info-line\\">
      <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">Group 1<span class=\\"group-item-short-name\\"> (grp1)</span></div>
      <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
        <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
      </div>
    </div>
    <div class=\\"group-item-info-line\\">
      <div class=\\"group-item-title\\">1 Dataset,</div> 1 Member
    </div>
  </div>
  <div class=\\"group-item-actions\\">
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
    </div>
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Manage group</div>
    </div>
  </div>
</div>"
`;

exports[`GroupsListItem > it should match snapshot with two members and admin role 1`] = `
"<div class=\\"group-item\\">
  <div class=\\"group-item-info\\">
    <div class=\\"group-item-title-wrapper group-item-info-line\\">
      <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">Group 1<span class=\\"group-item-short-name\\"> (grp1)</span></div>
      <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
        <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
      </div>
    </div>
    <div class=\\"group-item-info-line\\">
      <div class=\\"group-item-title\\">1 Dataset,</div> 2 Members
    </div>
  </div>
  <div class=\\"group-item-actions\\">
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
    </div>
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Manage group</div>
    </div>
  </div>
</div>"
`;

exports[`GroupsListItem > it should match snapshot with two members and not admin role 1`] = `
"<div class=\\"group-item\\">
  <div class=\\"group-item-info\\">
    <div class=\\"group-item-title-wrapper group-item-info-line\\">
      <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">Group 1<span class=\\"group-item-short-name\\"> (grp1)</span></div>
      <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
        <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
      </div>
    </div>
    <div class=\\"group-item-info-line\\">
      <div class=\\"group-item-title\\">1 Dataset,</div> 1 Member
    </div>
  </div>
  <div class=\\"group-item-actions\\">
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
    </div>
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Browse group</div>
    </div>
  </div>
</div>"
`;

exports[`GroupsListItem > it should match snapshot with two members, not admin role and 0 datasets 1`] = `
"<div class=\\"group-item\\">
  <div class=\\"group-item-info\\">
    <div class=\\"group-item-title-wrapper group-item-info-line\\">
      <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">Group 1<span class=\\"group-item-short-name\\"> (grp1)</span></div>
      <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
        <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
      </div>
    </div>
    <div class=\\"group-item-info-line\\">
      <!----> 1 Member
    </div>
  </div>
  <div class=\\"group-item-actions\\">
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
    </div>
    <div class=\\"flex items-center\\">
      <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
        </svg></div>
      <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Browse group</div>
    </div>
  </div>
</div>"
`;
